# abhinav-ai-poc

./: .gitignore
exercise-4_mcp_langraph/: MCP_Learning_Guide.md
exercise_1_simple-rag-system/: RAG_Learning_Guide.md  README.md  requirements.txt
exercise_1_simple-rag-system/data/: sample_documents.txt
exercise_1_simple-rag-system/src/: embeddings.py  llm.py  rag_pipeline.py  tokenizer.py  vector_store.py
exercise_2_pdf-rag-system/: PDF_RAG_Learning_Guide.md  requirements.txt
exercise_2_pdf-rag-system/src/: embeddings.py  llm.py  pdf_loader.py  rag_pipeline.py  vector_store.py
exercise_3_learn-langchain/: LangChain_Learning_Guide.md  requirements.txt
exercise_3_learn-langchain/app/: streamlit_app.py
exercise_4_multi_model/: Multi_Model_Chat_Learning_Guide.md  requirements.txt
exercise_4_multi_model/backend/: main.py
exercise_4_multi_model/frontend/: app.py
exercise_5_mcp/: README.md
exercise_5_mcp/part1_github_mcp/: README.md
exercise_5_mcp/part2_weather_mcp/: README.md  mcp_client.py  pyproject.toml  weather_server.py
exercise_5_mcp/part3_mcp_langchain/: main.py  pyproject.toml
exercise_5_mcp/part3_mcp_langchain/mcp_client/: client.py
exercise_5_mcp/part3_mcp_langchain/mcp_server/: math_server.py  weather_server.py
exercise_5_mcp_langraph/: LangGraph_Learning_Guide.md
exercise_6_langgraph_langsmith/: main.py  pyproject.toml
exercise_6_langgraph_langsmith/src/chatbot/: chatbot.py
exercise_6_langgraph_langsmith/src/graph_with_condition/: graph_with_condition.py
exercise_6_langgraph_langsmith/src/simple_graph/: simple_graph.py
(+18 files in other folders)
